# AI-Driven-Competitive-Analysis-Agent-Collaboration-System

./: .env.example  README.md  main.py  pyproject.toml  requirements.txt
competitive_analysis/: __init__.py
competitive_analysis/agents/: __init__.py  analyst.py  collector.py  qa_agent.py  writer.py
competitive_analysis/cli/: interactive.py  main.py
competitive_analysis/evaluation/: __init__.py  metrics.py  runner.py  scenarios.py
competitive_analysis/llm/: __init__.py  base.py  claude_llm.py  deepseek_llm.py  factory.py  gemini_llm.py  openai_llm.py
competitive_analysis/memory/: storage.py
competitive_analysis/prompts/: analyst_compare.md  collector_extract_data.md  collector_plan_queries.md  loader.py  qa_review.md  writer_generate_report.md
competitive_analysis/report/: __init__.py  html_template.py  renderer.py
competitive_analysis/schemas/: __init__.py  competitive.py
competitive_analysis/skills/: loader.py  types.py
competitive_analysis/tools/: tavily_search.py  web_scraper.py
competitive_analysis/utils/: config.py  logger.py  tracing.py
competitive_analysis/workflow/: __init__.py  graph.py  nodes.py  state.py
docs/: SETUP.md  architecture.md  internship-guide.md
examples/: sample_eval.json  sample_trace.json
outputs/: report.html
outputs/runs/20260527_154430_090734b3/: events.jsonl  report.md  trace.json
outputs/runs/20260528_025119_ddc1e508/: events.jsonl  report.md  trace.json
tests/: test_config.py  test_evaluation.py  test_llm_factory.py  test_memory.py  test_qa_agent.py  test_schemas.py  test_tracing.py
(+3 files in other folders)
