[project]
name = "competitive-analysis-agent"
version = "0.1.0"
description = "AI-Driven Competitive Analysis Multi-Agent System with DAG workflow"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
dependencies = [
    "langgraph>=0.2.0",
    "langchain-core>=0.3.0",
    "openai>=1.30.0",
    "pydantic>=2.0",
    "python-dotenv>=1.0.0",
    "tavily-python>=0.5.0",
    "httpx>=0.27.0",
]

[project.optional-dependencies]
claude = ["anthropic>=0.30.0"]
gemini = ["google-generativeai>=0.5.0"]
screenshot = ["playwright>=1.40.0"]
e2b = ["e2b-code-interpreter>=1.0.0"]
all = [
    "anthropic>=0.30.0",
    "google-generativeai>=0.5.0",
    "playwright>=1.40.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "ruff>=0.4.0",
]

[project.scripts]
competitive-analysis = "competitive_analysis.cli.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["competitive_analysis"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.pytest.ini_options]
testpaths = ["tests"]
